# ROB4009

./: README.md
custom_interface/: subscriber_member_function_custom_interface.py
scripts/control_wo_ros/: kinematics.py  main.py  robot_params.py  serial_comm.py  visualization.py
src/twolink_control/: README.md  package.xml  setup.cfg  setup.py
src/twolink_control/twolink_control/: keyboard_command.py  pub_yolo.py  serial_interface.py  sub_serial.py
src/twolink_gazebo/: CMakeLists.txt  README.md  setup.py
src/twolink_gazebo/config/: joint_controller.yaml  rviz.rviz
src/twolink_gazebo/launch/: gazebo.launch.py
src/twolink_gazebo/meshes/: base_link.stl  d435_holder.stl  link1.stl  link2.stl
src/twolink_gazebo/scripts/: dummy_data_publisher.py  joint_publisher.py
src/twolink_gazebo/urdf/: twolinkbot.urdf.xacro
src/twolink_msgs/: CMakeLists.txt  package.xml
src/twolink_msgs/msg/: CMD.msg  XYpos.msg
src/urdf_tutorial/: rviz.rviz
src/urdf_tutorial/urdf/: box_robot.urdf  cylinder_robot.urdf
twolink_act/: CMakeLists.txt  clnt.py  package.xml  serv.py
twolink_act/action/: Robotvalue.action
twolink_gazebo/: CMakeLists.txt  README.md  joint_publisher.py  package.xml  setup.py
twolink_gazebo/config/: joint_controller.yaml  rviz.rviz
twolink_gazebo/launch/: gazebo.launch.py
twolink_gazebo/meshes/: d435.stl  link1.stl
twolink_gazebo/scripts/: joint_publisher.py
twolink_gazebo/urdf/: macros.xacro  twolinkbot.urdf.xacro
twolink_gazebo/worlds/: table_world.world
urdf_tutorial/: package.xml  setup.py
urdf_tutorial/launch/: view_robot.launch.py
urdf_tutorial/urdf/: macros.xacro  sphere_robot.urdf
